feat: #54 Completen ConfigurationPlanSpec with headerPolicy + update docs Signed-off-by: Laurent Broudoux <laurent.broudoux@gmail.com>
