# api/src/main/java/io/reshapr/kubernetes/api/configurationplan/v1alpha1/HeaderRename.java
@@ -1,0 +1,51 @@
+/*
+ * Copyright The Reshapr Authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package io.reshapr.kubernetes.api.configurationplan.v1alpha1;
+
+import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonPropertyDescription;
+import com.fasterxml.jackson.annotation.JsonPropertyOrder;
+import io.sundr.builder.annotations.Buildable;
+
+@JsonIgnoreProperties(ignoreUnknown = true)
+@JsonInclude(JsonInclude.Include.NON_NULL)
+@JsonPropertyOrder({ "from", "to" })
+@Buildable(editableEnabled = false, builderPackage = "io.fabric8.kubernetes.api.builder")
+public class HeaderRename {
+
+   @JsonPropertyDescription("Name of the incoming header to rename.")
+   private String from;
+
+   @JsonPropertyDescription("Target header name the value is propagated under.")
+   private String to;
+
+   public String getFrom() {
+      return from;
+   }
+
+   public void setFrom(String from) {
+      this.from = from;
+   }
+
+   public String getTo() {
+      return to;
+   }
+
+   public void setTo(String to) {
+      this.to = to;
+   }
+}
